Fix #18331 - [Feature] Add remote pagination support